Use the right contractid for the pref service. Bug 178062, r=brendan, sr=alecf